--- a/src/main/HomePage.fxml
+++ b/src/main/HomePage.fxml
@@ -15,120 +15,6 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="960.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="960.0" stylesheets="@styles.css">
-         <top>
-            <Pane prefHeight="101.0" prefWidth="960.0" style="-fx-background-color: #037C99;" BorderPane.alignment="CENTER">
-               <children>
-                  <Button layoutX="26.0" layoutY="14.0" mnemonicParsing="false" prefHeight="64.0" prefWidth="97.0" text="Button" />
-                  <Button layoutX="801.0" layoutY="12.0" mnemonicParsing="false" prefHeight="64.0" prefWidth="123.0" text="Button" />
-                  <TextField fx:id="searchBarTextField" layoutX="164.0" layoutY="32.0" prefHeight="25.0" prefWidth="562.0" />
-               </children>
-            </Pane>
-         </top>
-         <left>
-            <Pane prefHeight="618.0" prefWidth="164.0" BorderPane.alignment="CENTER">
-               <children>
-                  <Pane layoutX="5.0" layoutY="30.0" prefHeight="578.0" prefWidth="155.0" styleClass="border">
-                     <children>
-                        <Button layoutX="23.0" layoutY="82.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="111.0" text="Button" />
-                        <Button layoutX="22.0" layoutY="126.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="111.0" text="Button" />
-                        <Button layoutX="22.0" layoutY="219.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="111.0" text="Button" />
-                        <Button layoutX="22.0" layoutY="263.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="111.0" text="Button" />
-                        <Button layoutX="22.0" layoutY="307.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="111.0" text="Button" />
-                        <Button layoutX="22.0" layoutY="351.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="111.0" text="Button" />
-                        <Button layoutX="22.0" layoutY="395.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="111.0" text="Button" />
-                        <Button layoutX="22.0" layoutY="439.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="111.0" text="Button" />
-                        <Button layoutX="22.0" layoutY="483.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="111.0" text="Button" />
-                        <Label layoutX="50.0" layoutY="20.0" text="Kategorier" />
-                     </children>
-                  </Pane>
-               </children>
-            </Pane>
-         </left>
-         <bottom>
-            <Pane prefHeight="12.0" prefWidth="960.0" BorderPane.alignment="CENTER" />
-         </bottom>
-         <right>
-            <Pane prefHeight="570.0" prefWidth="225.0" BorderPane.alignment="CENTER">
-               <children>
-                  <AnchorPane layoutX="-1.0" layoutY="30.0" prefHeight="577.0" prefWidth="223.0" styleClass="border">
-                     <children>
-                        <Button fx:id="tillKassanButton" layoutX="32.0" layoutY="486.0" mnemonicParsing="false" prefHeight="62.0" prefWidth="159.0" text="Button" />
-                        <Label layoutX="73.0" layoutY="26.0" text="Kundvagn" />
-                        <Label fx:id="summaLbl" layoutX="181.0" layoutY="459.0" text="0 kr" />
-                        <FlowPane fx:id="shoppingCartFlowPane" layoutX="6.0" layoutY="54.0" prefHeight="406.0" prefWidth="215.0" AnchorPane.bottomAnchor="119.0" AnchorPane.leftAnchor="4.0" AnchorPane.rightAnchor="4.0" AnchorPane.topAnchor="52.0" />
-                     </children>
-                  </AnchorPane>
-               </children>
-            </Pane>
-         </right>
-         <center>
-            <SplitPane dividerPositions="0.10082644628099173" orientation="VERTICAL" prefHeight="607.0" prefWidth="553.0" BorderPane.alignment="CENTER">
-              <items>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
-                     <children>
-                        <Pane prefHeight="58.0" prefWidth="569.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                           <children>
-                              <Button layoutX="14.0" layoutY="7.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="84.0" text="Button" />
-                              <Button layoutX="104.0" layoutY="7.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="84.0" text="Button" />
-                              <Button layoutX="201.0" layoutY="7.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="84.0" text="Button" />
-                              <Button layoutX="299.0" layoutY="7.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="84.0" text="Button" />
-                           </children>
-                        </Pane>
-                     </children>
-                  </AnchorPane>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
-                     <children>
-                        <Pane prefHeight="541.0" prefWidth="569.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                           <children>
-                              <StackPane prefHeight="541.0" prefWidth="569.0" />
-                              <StackPane prefHeight="541.0" prefWidth="569.0" />
-                              <StackPane prefHeight="541.0" prefWidth="569.0">
-                                 <children>
-                                    <SplitPane dividerPositions="0.10204081632653061" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0">
-                                      <items>
-                                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
-                                             <children>
-                                                <FlowPane layoutX="-24.0" layoutY="-64.0" prefHeight="72.0" prefWidth="567.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                                             </children>
-                                          </AnchorPane>
-                                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
-                                             <children>
-                                                <FlowPane layoutX="53.0" layoutY="60.0" prefHeight="461.0" prefWidth="567.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                                             </children>
-                                          </AnchorPane>
-                                      </items>
-                                    </SplitPane>
-                                    <StackPane prefHeight="541.0" prefWidth="569.0">
-                                       <children>
-                                          <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: gray;">
-                                             <children>
-                                                <ImageView fx:id="offersImage" fitHeight="216.0" fitWidth="248.0" layoutX="60.0" layoutY="55.0" pickOnBounds="true" preserveRatio="true" />
-                                                <ImageView fx:id="videoImage" fitHeight="112.0" fitWidth="157.0" layoutX="359.0" layoutY="55.0" pickOnBounds="true" preserveRatio="true" />
-                                                <ImageView fx:id="newsImage" fitHeight="112.0" fitWidth="157.0" layoutX="359.0" layoutY="163.0" pickOnBounds="true" preserveRatio="true" />
-                                                <Label layoutX="262.0" layoutY="314.0" text="Carousel" />
-                                                <Pane layoutX="52.0" layoutY="364.0" prefHeight="162.0" prefWidth="467.0" style="-fx-background-color: purple;">
-                                                   <children>
-                                                      <FlowPane fx:id="carouselFlowPane" prefHeight="162.0" prefWidth="467.0" />
-                                                   </children>
-                                                </Pane>
-                                                <ImageView fx:id="rightArrowImage" fitHeight="45.0" fitWidth="45.0" layoutX="522.0" layoutY="421.0" pickOnBounds="true" preserveRatio="true" />
-                                                <ImageView fx:id="leftArrowImage" fitHeight="45.0" fitWidth="45.0" layoutX="3.0" layoutY="421.0" pickOnBounds="true" preserveRatio="true" />
-                                             </children>
-                                          </Pane>
-                                       </children>
-                                    </StackPane>
-                                    <StackPane prefHeight="541.0" prefWidth="569.0" />
-                                 </children>
-                              </StackPane>
-                           </children>
-                        </Pane>
-                     </children>
-                  </AnchorPane>
-              </items>
-            </SplitPane>
-         </center>
-      </BorderPane>
       <BorderPane prefHeight="720.0" prefWidth="960.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <top>
             <Pane prefHeight="101.0" prefWidth="960.0" style="-fx-background-color: #037C99;" BorderPane.alignment="CENTER">
@@ -241,6 +127,120 @@
                   </Pane>
                </children>
             </Pane>
+         </center>
+      </BorderPane>
+      <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="960.0" stylesheets="@styles.css">
+         <top>
+            <Pane prefHeight="101.0" prefWidth="960.0" style="-fx-background-color: #037C99;" BorderPane.alignment="CENTER">
+               <children>
+                  <Button layoutX="26.0" layoutY="14.0" mnemonicParsing="false" prefHeight="64.0" prefWidth="97.0" text="Button" />
+                  <Button layoutX="801.0" layoutY="12.0" mnemonicParsing="false" prefHeight="64.0" prefWidth="123.0" text="Button" />
+                  <TextField fx:id="searchBarTextField" layoutX="164.0" layoutY="32.0" prefHeight="25.0" prefWidth="562.0" />
+               </children>
+            </Pane>
+         </top>
+         <left>
+            <Pane prefHeight="618.0" prefWidth="164.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
+               <children>
+                  <Pane layoutX="5.0" layoutY="30.0" prefHeight="578.0" prefWidth="155.0" styleClass="border">
+                     <children>
+                        <Button layoutX="23.0" layoutY="82.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="111.0" text="Button" />
+                        <Button layoutX="22.0" layoutY="126.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="111.0" text="Button" />
+                        <Button layoutX="22.0" layoutY="219.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="111.0" text="Button" />
+                        <Button layoutX="22.0" layoutY="263.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="111.0" text="Button" />
+                        <Button layoutX="22.0" layoutY="307.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="111.0" text="Button" />
+                        <Button layoutX="22.0" layoutY="351.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="111.0" text="Button" />
+                        <Button layoutX="22.0" layoutY="395.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="111.0" text="Button" />
+                        <Button layoutX="22.0" layoutY="439.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="111.0" text="Button" />
+                        <Button layoutX="22.0" layoutY="483.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="111.0" text="Button" />
+                        <Label layoutX="50.0" layoutY="20.0" text="Kategorier" />
+                     </children>
+                  </Pane>
+               </children>
+            </Pane>
+         </left>
+         <bottom>
+            <Pane prefHeight="12.0" prefWidth="960.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER" />
+         </bottom>
+         <right>
+            <Pane prefHeight="570.0" prefWidth="225.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
+               <children>
+                  <AnchorPane layoutX="-1.0" layoutY="30.0" prefHeight="577.0" prefWidth="223.0" styleClass="border">
+                     <children>
+                        <Button fx:id="tillKassanButton" layoutX="32.0" layoutY="486.0" mnemonicParsing="false" prefHeight="62.0" prefWidth="159.0" text="Button" />
+                        <Label layoutX="73.0" layoutY="26.0" text="Kundvagn" />
+                        <Label fx:id="summaLbl" layoutX="181.0" layoutY="459.0" text="0 kr" />
+                        <FlowPane fx:id="shoppingCartFlowPane" layoutX="6.0" layoutY="54.0" prefHeight="406.0" prefWidth="215.0" AnchorPane.bottomAnchor="119.0" AnchorPane.leftAnchor="4.0" AnchorPane.rightAnchor="4.0" AnchorPane.topAnchor="52.0" />
+                     </children>
+                  </AnchorPane>
+               </children>
+            </Pane>
+         </right>
+         <center>
+            <SplitPane dividerPositions="0.10082644628099173" orientation="VERTICAL" prefHeight="607.0" prefWidth="553.0" BorderPane.alignment="CENTER">
+              <items>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+                     <children>
+                        <Pane prefHeight="58.0" prefWidth="569.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                           <children>
+                              <Button layoutX="14.0" layoutY="7.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="84.0" text="Button" />
+                              <Button layoutX="104.0" layoutY="7.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="84.0" text="Button" />
+                              <Button layoutX="201.0" layoutY="7.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="84.0" text="Button" />
+                              <Button layoutX="299.0" layoutY="7.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="84.0" text="Button" />
+                           </children>
+                        </Pane>
+                     </children>
+                  </AnchorPane>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+                     <children>
+                        <Pane prefHeight="541.0" prefWidth="569.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                           <children>
+                              <StackPane prefHeight="541.0" prefWidth="569.0">
+                                 <children>
+                                    <SplitPane dividerPositions="0.10204081632653061" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0">
+                                      <items>
+                                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+                                             <children>
+                                                <FlowPane layoutX="-24.0" layoutY="-64.0" prefHeight="72.0" prefWidth="567.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                             </children>
+                                          </AnchorPane>
+                                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+                                             <children>
+                                                <FlowPane layoutX="53.0" layoutY="60.0" prefHeight="461.0" prefWidth="567.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                             </children>
+                                          </AnchorPane>
+                                      </items>
+                                    </SplitPane>
+                                    <StackPane prefHeight="541.0" prefWidth="569.0">
+                                       <children>
+                                          <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: gray;">
+                                             <children>
+                                                <ImageView fx:id="offersImage" fitHeight="216.0" fitWidth="248.0" layoutX="60.0" layoutY="55.0" pickOnBounds="true" preserveRatio="true" />
+                                                <ImageView fx:id="videoImage" fitHeight="112.0" fitWidth="157.0" layoutX="359.0" layoutY="55.0" pickOnBounds="true" preserveRatio="true" />
+                                                <ImageView fx:id="newsImage" fitHeight="112.0" fitWidth="157.0" layoutX="359.0" layoutY="163.0" pickOnBounds="true" preserveRatio="true" />
+                                                <Label layoutX="262.0" layoutY="314.0" text="Carousel" />
+                                                <Pane layoutX="52.0" layoutY="364.0" prefHeight="162.0" prefWidth="467.0" style="-fx-background-color: purple;">
+                                                   <children>
+                                                      <FlowPane fx:id="carouselFlowPane" prefHeight="162.0" prefWidth="467.0" />
+                                                   </children>
+                                                </Pane>
+                                                <ImageView fx:id="rightArrowImage" fitHeight="45.0" fitWidth="45.0" layoutX="522.0" layoutY="421.0" pickOnBounds="true" preserveRatio="true" />
+                                                <ImageView fx:id="leftArrowImage" fitHeight="45.0" fitWidth="45.0" layoutX="3.0" layoutY="421.0" pickOnBounds="true" preserveRatio="true" />
+                                             </children>
+                                          </Pane>
+                                       </children>
+                                    </StackPane>
+                                    <StackPane prefHeight="541.0" prefWidth="569.0" />
+                                 </children>
+                              </StackPane>
+                              <StackPane prefHeight="541.0" prefWidth="569.0" />
+                              <StackPane prefHeight="541.0" prefWidth="569.0" style="-fx-background-color: RED;" />
+                           </children>
+                        </Pane>
+                     </children>
+                  </AnchorPane>
+              </items>
+            </SplitPane>
          </center>
       </BorderPane>
    </children>
