--- a/src/main/HomePage.fxml
+++ b/src/main/HomePage.fxml
@@ -196,10 +196,22 @@
                      <children>
                         <Pane prefHeight="58.0" prefWidth="569.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <children>
-                              <Button layoutX="14.0" layoutY="7.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="84.0" text="Button" />
-                              <Button layoutX="104.0" layoutY="7.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="84.0" text="Button" />
-                              <Button layoutX="201.0" layoutY="7.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="84.0" text="Button" />
-                              <Button layoutX="299.0" layoutY="7.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="84.0" text="Button" />
+                              <Button layoutX="9.0" layoutY="12.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="120.0" text="Button">
+                                 <graphic>
+                                    <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true" />
+                                 </graphic></Button>
+                              <Button layoutX="153.0" layoutY="12.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="120.0" text="Button">
+                                 <graphic>
+                                    <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true" />
+                                 </graphic></Button>
+                              <Button layoutX="297.0" layoutY="12.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="120.0" text="Button">
+                                 <graphic>
+                                    <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true" />
+                                 </graphic></Button>
+                              <Button layoutX="441.0" layoutY="12.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="120.0" text="Button">
+                                 <graphic>
+                                    <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true" />
+                                 </graphic></Button>
                            </children>
                         </Pane>
                      </children>
@@ -246,90 +258,6 @@
                                     <StackPane prefHeight="541.0" prefWidth="569.0" />
                                  </children>
                               </StackPane>
-                              <StackPane prefHeight="541.0" prefWidth="569.0" style="-fx-background-color: RED;">
-                                 <children>
-                                    <Accordion>
-                                      <panes>
-                                        <TitledPane animated="false" text=" ">
-                                          <content>
-                                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                                                   <children>
-                                                      <FlowPane layoutX="16.0" prefHeight="451.0" prefWidth="536.0" style="-fx-background-color: gray;" />
-                                                   </children>
-                                                </AnchorPane>
-                                          </content>
-                                             <graphic>
-                                                <Pane prefHeight="58.0" prefWidth="536.0">
-                                                   <children>
-                                                      <Label layoutX="14.0" layoutY="21.0" prefHeight="17.0" prefWidth="64.0" text="25e Maj 2020" />
-                                                      <Button layoutX="200.0" layoutY="17.0" mnemonicParsing="false" text="Lägg till som iköpslista" />
-                                                   </children>
-                                                </Pane>
-                                             </graphic>
-                                        </TitledPane>
-                                          <TitledPane animated="false" text=" ">
-                                             <content>
-                                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                                                   <children>
-                                                      <FlowPane layoutX="16.0" prefHeight="450.0" prefWidth="536.0" style="-fx-background-color: gray;" />
-                                                   </children>
-                                                </AnchorPane>
-                                             </content>
-                                             <graphic>
-                                                <Pane prefHeight="58.0" prefWidth="536.0">
-                                                   <children>
-                                                      <Label layoutX="14.0" layoutY="21.0" prefHeight="17.0" prefWidth="64.0" text="25e Maj 2020" />
-                                                      <Button layoutX="200.0" layoutY="17.0" mnemonicParsing="false" text="Lägg till som iköpslista" />
-                                                   </children>
-                                                </Pane>
-                                             </graphic>
-                                          </TitledPane>
-                                      </panes>
-                                    </Accordion>
-                                 </children></StackPane>
-                              <StackPane prefHeight="541.0" prefWidth="569.0" style="-fx-background-color: red;">
-                                 <children>
-                                    <Accordion>
-                                       <panes>
-                                          <TitledPane animated="false" text=" ">
-                                             <content>
-                                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="382.0" prefWidth="575.0">
-                                                   <children>
-                                                      <FlowPane layoutX="16.0" prefHeight="451.0" prefWidth="536.0" style="-fx-background-color: gray;" />
-                                                   </children>
-                                                </AnchorPane>
-                                             </content>
-                                             <graphic>
-                                                <Pane prefHeight="58.0" prefWidth="536.0">
-                                                   <children>
-                                                      <Label layoutX="14.0" layoutY="11.0" prefHeight="17.0" prefWidth="92.0" text="Inköpslista 1" />
-                                                      <Button layoutX="208.0" layoutY="2.0" mnemonicParsing="false" text="Lägg till i kundvagn" />
-                                                      <Button layoutX="198.0" layoutY="30.0" mnemonicParsing="false" text="Ta bort som inköpslista" />
-                                                   </children>
-                                                </Pane>
-                                             </graphic>
-                                          </TitledPane>
-                                          <TitledPane animated="false" text=" ">
-                                             <content>
-                                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                                                   <children>
-                                                      <FlowPane layoutX="16.0" prefHeight="451.0" prefWidth="536.0" style="-fx-background-color: gray;" />
-                                                   </children>
-                                                </AnchorPane>
-                                             </content>
-                                             <graphic>
-                                                <Pane prefHeight="58.0" prefWidth="536.0">
-                                                   <children>
-                                                      <Label layoutX="14.0" layoutY="11.0" prefHeight="17.0" prefWidth="92.0" text="Inköpslista 1" />
-                                                      <Button layoutX="208.0" layoutY="2.0" mnemonicParsing="false" text="Lägg till i kundvagn" />
-                                                      <Button layoutX="199.0" layoutY="30.0" mnemonicParsing="false" text="Ta bort som inköpslista" />
-                                                   </children>
-                                                </Pane>
-                                             </graphic>
-                                          </TitledPane>
-                                       </panes>
-                                    </Accordion>
-                                 </children></StackPane>
                               <StackPane prefHeight="541.0" prefWidth="569.0" style="-fx-background-color: yellow;">
                                  <children>
                                     <Pane prefHeight="200.0" prefWidth="200.0">
@@ -421,6 +349,99 @@
                                     </Pane>
                                  </children>
                               </StackPane>
+                              <StackPane prefHeight="541.0" prefWidth="569.0" style="-fx-background-color: red;">
+                                 <children>
+                                    <ScrollPane prefHeight="200.0" prefWidth="200.0">
+                                       <content>
+                                          <Accordion>
+                                             <panes>
+                                                <TitledPane animated="false" text=" ">
+                                                   <content>
+                                                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="382.0" prefWidth="575.0">
+                                                         <children>
+                                                            <FlowPane layoutX="16.0" prefHeight="451.0" prefWidth="536.0" style="-fx-background-color: gray;" />
+                                                         </children>
+                                                      </AnchorPane>
+                                                   </content>
+                                                   <graphic>
+                                                      <Pane prefHeight="58.0" prefWidth="536.0">
+                                                         <children>
+                                                            <Label layoutX="14.0" layoutY="11.0" prefHeight="17.0" prefWidth="92.0" text="Inköpslista 1" />
+                                                            <Button layoutX="208.0" layoutY="2.0" mnemonicParsing="false" text="Lägg till i kundvagn" />
+                                                            <Button layoutX="198.0" layoutY="30.0" mnemonicParsing="false" text="Ta bort som inköpslista" />
+                                                         </children>
+                                                      </Pane>
+                                                   </graphic>
+                                                </TitledPane>
+                                                <TitledPane animated="false" text=" ">
+                                                   <content>
+                                                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                                         <children>
+                                                            <FlowPane layoutX="16.0" prefHeight="451.0" prefWidth="536.0" style="-fx-background-color: gray;" />
+                                                         </children>
+                                                      </AnchorPane>
+                                                   </content>
+                                                   <graphic>
+                                                      <Pane prefHeight="58.0" prefWidth="536.0">
+                                                         <children>
+                                                            <Label layoutX="14.0" layoutY="11.0" prefHeight="17.0" prefWidth="92.0" text="Inköpslista 1" />
+                                                            <Button layoutX="208.0" layoutY="2.0" mnemonicParsing="false" text="Lägg till i kundvagn" />
+                                                            <Button layoutX="199.0" layoutY="30.0" mnemonicParsing="false" text="Ta bort som inköpslista" />
+                                                         </children>
+                                                      </Pane>
+                                                   </graphic>
+                                                </TitledPane>
+                                             </panes>
+                                          </Accordion>
+                                       </content>
+                                    </ScrollPane>
+                                 </children>
+                              </StackPane>
+                              <StackPane prefHeight="541.0" prefWidth="570.0" style="-fx-background-color: RED;">
+                                 <children>
+                                    <ScrollPane prefHeight="541.0" prefWidth="445.0">
+                                       <content>
+                                          <Accordion prefHeight="234.0" prefWidth="508.0">
+                                             <panes>
+                                                <TitledPane animated="false" text=" ">
+                                                   <content>
+                                                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                                         <children>
+                                                            <FlowPane layoutX="16.0" prefHeight="451.0" prefWidth="536.0" style="-fx-background-color: gray;" />
+                                                         </children>
+                                                      </AnchorPane>
+                                                   </content>
+                                                   <graphic>
+                                                      <Pane prefHeight="58.0" prefWidth="536.0">
+                                                         <children>
+                                                            <Label layoutX="14.0" layoutY="21.0" prefHeight="17.0" prefWidth="64.0" text="25e Maj 2020" />
+                                                            <Button layoutX="200.0" layoutY="17.0" mnemonicParsing="false" text="Lägg till som iköpslista" />
+                                                         </children>
+                                                      </Pane>
+                                                   </graphic>
+                                                </TitledPane>
+                                                <TitledPane animated="false" text=" ">
+                                                   <content>
+                                                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                                         <children>
+                                                            <FlowPane layoutX="16.0" prefHeight="450.0" prefWidth="536.0" style="-fx-background-color: gray;" />
+                                                         </children>
+                                                      </AnchorPane>
+                                                   </content>
+                                                   <graphic>
+                                                      <Pane prefHeight="58.0" prefWidth="536.0">
+                                                         <children>
+                                                            <Label layoutX="14.0" layoutY="21.0" prefHeight="17.0" prefWidth="64.0" text="25e Maj 2020" />
+                                                            <Button layoutX="200.0" layoutY="17.0" mnemonicParsing="false" text="Lägg till som iköpslista" />
+                                                         </children>
+                                                      </Pane>
+                                                   </graphic>
+                                                </TitledPane>
+                                             </panes>
+                                          </Accordion>
+                                       </content>
+                                    </ScrollPane>
+                                 </children></StackPane>
                            </children>
                         </Pane>
                      </children>
